components/apicurio-registry/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-application
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: apicurio-registry
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elapicurio-registry
  namespace: test
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-apicurio-registry
    weight: null
status: {}
